// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders special message on empty list 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaProvider
      onInsetsChange={[Function]}
      style={
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Array [
            Object {
              "zIndex": 1,
            },
            false,
          ]
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            pointerEvents="box-none"
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": Object {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            pointerEvents="box-none"
            style={
              Object {
                "height": 64,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "height": 20,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                pointerEvents="box-none"
                style={
                  Object {
                    "marginHorizontal": 16,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  MockedScreen
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransitionStart={[Function]}
            pointerEvents="box-none"
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            transitionSpec={
              Object {
                "close": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="none"
                  style={
                    Object {
                      "backgroundColor": "rgb(242, 242, 242)",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "shadowColor": "#000",
                      "shadowOffset": Object {
                        "height": 1,
                        "width": -1,
                      },
                      "shadowOpacity": 0.3,
                      "shadowRadius": 5,
                      "top": 0,
                      "width": 3,
                    }
                  }
                />
                <View
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        accessibilityStates={Object {}}
                        style={
                          Object {
                            "backgroundColor": "#ffffff",
                            "height": "100%",
                            "shadowColor": "#000000",
                            "shadowOffset": Object {
                              "height": 3,
                              "width": 0,
                            },
                            "shadowOpacity": 0.24,
                            "shadowRadius": 4,
                            "width": "100%",
                          }
                        }
                      >
                        <RCTSafeAreaView
                          emulateUnlessSupported={true}
                          style={
                            Array [
                              Object {
                                "backgroundColor": "#6200ee",
                                "elevation": 4,
                                "zIndex": 0,
                              },
                              Object {
                                "shadowColor": "#000000",
                                "shadowOffset": Object {
                                  "height": 3,
                                  "width": 0,
                                },
                                "shadowOpacity": 0.24,
                                "shadowRadius": 4,
                              },
                            ]
                          }
                        >
                          <View
                            accessibilityStates={Object {}}
                            style={
                              Object {
                                "alignItems": "center",
                                "backgroundColor": "#6200ee",
                                "elevation": 0,
                                "flexDirection": "row",
                                "height": 56,
                                "marginTop": null,
                                "paddingHorizontal": 4,
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "width": 48,
                                }
                              }
                            />
                            <View
                              accessibilityStates={Object {}}
                              accessible={true}
                              focusable={false}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Array [
                                  Object {
                                    "flex": 1,
                                    "paddingHorizontal": 12,
                                  },
                                  Array [
                                    false,
                                    Object {
                                      "alignItems": "center",
                                    },
                                    Object {
                                      "alignItems": "center",
                                      "display": "flex",
                                    },
                                  ],
                                ]
                              }
                            >
                              <Text
                                accessibilityRole="header"
                                accessibilityTraits="header"
                                accessible={true}
                                numberOfLines={1}
                                style={
                                  Array [
                                    Object {
                                      "color": "#000000",
                                      "fontFamily": "System",
                                      "fontWeight": "400",
                                      "textAlign": "left",
                                    },
                                    Array [
                                      Object {
                                        "color": "#ffffff",
                                        "fontFamily": "System",
                                        "fontWeight": "400",
                                      },
                                      Object {
                                        "fontSize": 17,
                                      },
                                      undefined,
                                    ],
                                  ]
                                }
                              >
                                You are Awesome App!
                              </Text>
                            </View>
                          </View>
                        </RCTSafeAreaView>
                        <View
                          style={
                            Object {
                              "flex": 1,
                              "paddingLeft": 16,
                              "paddingRight": 16,
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "height": "50%",
                              }
                            }
                          >
                            <Text
                              style={
                                Array [
                                  Object {
                                    "color": "#000000",
                                    "fontFamily": "System",
                                    "fontWeight": "400",
                                    "textAlign": "left",
                                  },
                                  Array [
                                    Object {
                                      "color": "rgba(0, 0, 0, 0.87)",
                                      "fontFamily": "System",
                                      "fontWeight": "400",
                                      "textAlign": "left",
                                      "writingDirection": "ltr",
                                    },
                                    Array [
                                      Object {
                                        "fontSize": 14,
                                        "letterSpacing": 0.25,
                                        "lineHeight": 20,
                                        "marginVertical": 2,
                                      },
                                      Object {
                                        "fontSize": 16,
                                        "marginTop": "auto",
                                      },
                                    ],
                                    Array [
                                      Object {
                                        "fontSize": 14,
                                        "letterSpacing": 0.25,
                                        "lineHeight": 20,
                                        "marginVertical": 2,
                                      },
                                      Object {
                                        "fontSize": 16,
                                        "marginTop": "auto",
                                      },
                                    ],
                                  ],
                                ]
                              }
                            >
                              Double tap your first awesome message in Home to add it to your favorites.
                            </Text>
                            <View
                              accessibilityStates={Object {}}
                              style={
                                Object {
                                  "backgroundColor": "transparent",
                                  "borderColor": "rgba(0, 0, 0, 0.29)",
                                  "borderRadius": 4,
                                  "borderStyle": "solid",
                                  "borderWidth": 0.5,
                                  "elevation": 0,
                                  "marginTop": 24,
                                  "minWidth": 64,
                                }
                              }
                            >
                              <View
                                accessibilityRole="button"
                                accessible={true}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Array [
                                    Object {
                                      "overflow": "hidden",
                                    },
                                    Object {
                                      "borderRadius": 4,
                                    },
                                  ]
                                }
                              >
                                <View
                                  style={
                                    Array [
                                      Object {
                                        "alignItems": "center",
                                        "flexDirection": "row",
                                        "justifyContent": "center",
                                      },
                                      undefined,
                                    ]
                                  }
                                >
                                  <View
                                    style={
                                      Object {
                                        "marginLeft": 12,
                                        "marginRight": -4,
                                      }
                                    }
                                  >
                                    <Text />
                                  </View>
                                  <Text
                                    numberOfLines={1}
                                    style={
                                      Array [
                                        Object {
                                          "color": "#000000",
                                          "fontFamily": "System",
                                          "fontWeight": "400",
                                          "textAlign": "left",
                                        },
                                        Array [
                                          Object {
                                            "letterSpacing": 1,
                                            "marginHorizontal": 16,
                                            "marginVertical": 9,
                                            "textAlign": "center",
                                          },
                                          undefined,
                                          Object {
                                            "textTransform": "uppercase",
                                          },
                                          Object {
                                            "color": "#6200ee",
                                            "fontFamily": "System",
                                            "fontWeight": "500",
                                          },
                                          Object {
                                            "fontFamily": "System",
                                            "fontWeight": "500",
                                          },
                                          undefined,
                                        ],
                                      ]
                                    }
                                  >
                                    Go to Home
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RNCSafeAreaProvider>
  </View>
</View>
`;

exports[`renders the list 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaProvider
      onInsetsChange={[Function]}
      style={
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Array [
            Object {
              "zIndex": 1,
            },
            false,
          ]
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            pointerEvents="box-none"
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": Object {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            pointerEvents="box-none"
            style={
              Object {
                "height": 64,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "height": 20,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                pointerEvents="box-none"
                style={
                  Object {
                    "marginHorizontal": 16,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  MockedScreen
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransitionStart={[Function]}
            pointerEvents="box-none"
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            transitionSpec={
              Object {
                "close": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="none"
                  style={
                    Object {
                      "backgroundColor": "rgb(242, 242, 242)",
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "shadowColor": "#000",
                      "shadowOffset": Object {
                        "height": 1,
                        "width": -1,
                      },
                      "shadowOpacity": 0.3,
                      "shadowRadius": 5,
                      "top": 0,
                      "width": 3,
                    }
                  }
                />
                <View
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        accessibilityStates={Object {}}
                        style={
                          Object {
                            "backgroundColor": "#ffffff",
                            "height": "100%",
                            "shadowColor": "#000000",
                            "shadowOffset": Object {
                              "height": 3,
                              "width": 0,
                            },
                            "shadowOpacity": 0.24,
                            "shadowRadius": 4,
                            "width": "100%",
                          }
                        }
                      >
                        <RCTSafeAreaView
                          emulateUnlessSupported={true}
                          style={
                            Array [
                              Object {
                                "backgroundColor": "#6200ee",
                                "elevation": 4,
                                "zIndex": 0,
                              },
                              Object {
                                "shadowColor": "#000000",
                                "shadowOffset": Object {
                                  "height": 3,
                                  "width": 0,
                                },
                                "shadowOpacity": 0.24,
                                "shadowRadius": 4,
                              },
                            ]
                          }
                        >
                          <View
                            accessibilityStates={Object {}}
                            style={
                              Object {
                                "alignItems": "center",
                                "backgroundColor": "#6200ee",
                                "elevation": 0,
                                "flexDirection": "row",
                                "height": 56,
                                "marginTop": null,
                                "paddingHorizontal": 4,
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "width": 48,
                                }
                              }
                            />
                            <View
                              accessibilityStates={Object {}}
                              accessible={true}
                              focusable={false}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Array [
                                  Object {
                                    "flex": 1,
                                    "paddingHorizontal": 12,
                                  },
                                  Array [
                                    false,
                                    Object {
                                      "alignItems": "center",
                                    },
                                    Object {
                                      "alignItems": "center",
                                      "display": "flex",
                                    },
                                  ],
                                ]
                              }
                            >
                              <Text
                                accessibilityRole="header"
                                accessibilityTraits="header"
                                accessible={true}
                                numberOfLines={1}
                                style={
                                  Array [
                                    Object {
                                      "color": "#000000",
                                      "fontFamily": "System",
                                      "fontWeight": "400",
                                      "textAlign": "left",
                                    },
                                    Array [
                                      Object {
                                        "color": "#ffffff",
                                        "fontFamily": "System",
                                        "fontWeight": "400",
                                      },
                                      Object {
                                        "fontSize": 17,
                                      },
                                      undefined,
                                    ],
                                  ]
                                }
                              >
                                You are Awesome App!
                              </Text>
                            </View>
                          </View>
                        </RCTSafeAreaView>
                        <View
                          style={
                            Object {
                              "flex": 1,
                              "paddingLeft": 0,
                              "paddingRight": 16,
                            }
                          }
                        >
                          <RCTScrollView
                            ItemSeparatorComponent={[Function]}
                            data={
                              Array [
                                Object {
                                  "author": "author-1",
                                  "country": "country-1",
                                  "id": "id-1",
                                  "isodate": "2029-01-01",
                                  "text": "text-1",
                                },
                                Object {
                                  "author": "author-2",
                                  "country": "country-2",
                                  "id": "id-2",
                                  "isodate": "2029-01-02",
                                  "text": "text-2",
                                },
                              ]
                            }
                            disableVirtualization={false}
                            extraData={Array []}
                            getItem={[Function]}
                            getItemCount={[Function]}
                            horizontal={false}
                            initialNumToRender={20}
                            keyExtractor={[Function]}
                            maxToRenderPerBatch={10}
                            onContentSizeChange={[Function]}
                            onEndReachedThreshold={0.2}
                            onLayout={[Function]}
                            onMomentumScrollEnd={[Function]}
                            onScroll={[Function]}
                            onScrollBeginDrag={[Function]}
                            onScrollEndDrag={[Function]}
                            removeClippedSubviews={false}
                            renderItem={[Function]}
                            scrollEventThrottle={50}
                            stickyHeaderIndices={Array []}
                            updateCellsBatchingPeriod={50}
                            viewabilityConfigCallbackPairs={Array []}
                            windowSize={21}
                          >
                            <View>
                              <View
                                onLayout={[Function]}
                                style={null}
                              >
                                <View
                                  accessible={true}
                                  focusable={false}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                  style={
                                    Object {
                                      "opacity": 1,
                                    }
                                  }
                                >
                                  <View
                                    accessible={true}
                                    focusable={false}
                                    onClick={[Function]}
                                    onResponderGrant={[Function]}
                                    onResponderMove={[Function]}
                                    onResponderRelease={[Function]}
                                    onResponderTerminate={[Function]}
                                    onResponderTerminationRequest={[Function]}
                                    onStartShouldSetResponder={[Function]}
                                    style={
                                      Array [
                                        false,
                                        Array [
                                          Object {
                                            "padding": 8,
                                          },
                                          undefined,
                                        ],
                                      ]
                                    }
                                  >
                                    <View
                                      style={
                                        Object {
                                          "flexDirection": "row",
                                        }
                                      }
                                    >
                                      <View
                                        style={
                                          Array [
                                            Object {
                                              "marginVertical": 6,
                                              "paddingLeft": 8,
                                            },
                                            Object {
                                              "flex": 1,
                                              "justifyContent": "center",
                                            },
                                          ]
                                        }
                                      >
                                        <Text
                                          numberOfLines={5}
                                          style={
                                            Array [
                                              Object {
                                                "color": "#000000",
                                                "fontFamily": "System",
                                                "fontWeight": "400",
                                                "textAlign": "left",
                                              },
                                              Array [
                                                Object {
                                                  "fontSize": 16,
                                                },
                                                Object {
                                                  "color": "rgba(0, 0, 0, 0.87)",
                                                },
                                                undefined,
                                              ],
                                            ]
                                          }
                                        >
                                          <Text
                                            style={
                                              Array [
                                                Object {
                                                  "color": "#000000",
                                                  "fontFamily": "System",
                                                  "fontWeight": "400",
                                                  "textAlign": "left",
                                                },
                                                Array [
                                                  Object {
                                                    "color": "rgba(0, 0, 0, 0.87)",
                                                    "fontFamily": "System",
                                                    "fontWeight": "400",
                                                    "textAlign": "left",
                                                    "writingDirection": "ltr",
                                                  },
                                                  Array [
                                                    Object {
                                                      "fontSize": 16,
                                                      "letterSpacing": 0.5,
                                                      "lineHeight": 24,
                                                      "marginVertical": 2,
                                                    },
                                                    undefined,
                                                  ],
                                                  Array [
                                                    Object {
                                                      "fontSize": 16,
                                                      "letterSpacing": 0.5,
                                                      "lineHeight": 24,
                                                      "marginVertical": 2,
                                                    },
                                                    undefined,
                                                  ],
                                                ],
                                              ]
                                            }
                                          >
                                            text-1
                                          </Text>
                                        </Text>
                                        <View
                                          style={
                                            Object {
                                              "flex": 1,
                                              "flexDirection": "row",
                                              "justifyContent": "space-between",
                                            }
                                          }
                                        >
                                          <Text
                                            style={
                                              Array [
                                                Object {
                                                  "color": "#000000",
                                                  "fontFamily": "System",
                                                  "fontWeight": "400",
                                                  "textAlign": "left",
                                                },
                                                Array [
                                                  Object {
                                                    "color": "rgba(0, 0, 0, 0.87)",
                                                    "fontFamily": "System",
                                                    "fontWeight": "400",
                                                    "textAlign": "left",
                                                    "writingDirection": "ltr",
                                                  },
                                                  Array [
                                                    Object {
                                                      "fontSize": 14,
                                                      "letterSpacing": 0.25,
                                                      "lineHeight": 20,
                                                      "marginVertical": 2,
                                                    },
                                                    undefined,
                                                  ],
                                                  Array [
                                                    Object {
                                                      "fontSize": 14,
                                                      "letterSpacing": 0.25,
                                                      "lineHeight": 20,
                                                      "marginVertical": 2,
                                                    },
                                                    undefined,
                                                  ],
                                                ],
                                              ]
                                            }
                                          >
                                            author-1
                                             from 
                                            country-1
                                          </Text>
                                          <Text
                                            style={
                                              Array [
                                                Object {
                                                  "color": "#000000",
                                                  "fontFamily": "System",
                                                  "fontWeight": "400",
                                                  "textAlign": "left",
                                                },
                                                Array [
                                                  Object {
                                                    "color": "rgba(0, 0, 0, 0.87)",
                                                    "fontFamily": "System",
                                                    "fontWeight": "400",
                                                    "textAlign": "left",
                                                    "writingDirection": "ltr",
                                                  },
                                                  Array [
                                                    Object {
                                                      "fontSize": 14,
                                                      "letterSpacing": 0.25,
                                                      "lineHeight": 20,
                                                      "marginVertical": 2,
                                                    },
                                                    Object {
                                                      "fontSize": 10,
                                                    },
                                                  ],
                                                  Array [
                                                    Object {
                                                      "fontSize": 14,
                                                      "letterSpacing": 0.25,
                                                      "lineHeight": 20,
                                                      "marginVertical": 2,
                                                    },
                                                    Object {
                                                      "fontSize": 10,
                                                    },
                                                  ],
                                                ],
                                              ]
                                            }
                                          >
                                            2029-01-01
                                          </Text>
                                        </View>
                                      </View>
                                    </View>
                                  </View>
                                </View>
                                <View
                                  accessibilityStates={Object {}}
                                  style={
                                    Array [
                                      Object {
                                        "backgroundColor": "rgba(0, 0, 0, 0.12)",
                                        "height": 0.5,
                                      },
                                      undefined,
                                      undefined,
                                    ]
                                  }
                                />
                              </View>
                              <View
                                onLayout={[Function]}
                                style={null}
                              >
                                <View
                                  accessible={true}
                                  focusable={false}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                  style={
                                    Object {
                                      "opacity": 1,
                                    }
                                  }
                                >
                                  <View
                                    accessible={true}
                                    focusable={false}
                                    onClick={[Function]}
                                    onResponderGrant={[Function]}
                                    onResponderMove={[Function]}
                                    onResponderRelease={[Function]}
                                    onResponderTerminate={[Function]}
                                    onResponderTerminationRequest={[Function]}
                                    onStartShouldSetResponder={[Function]}
                                    style={
                                      Array [
                                        false,
                                        Array [
                                          Object {
                                            "padding": 8,
                                          },
                                          undefined,
                                        ],
                                      ]
                                    }
                                  >
                                    <View
                                      style={
                                        Object {
                                          "flexDirection": "row",
                                        }
                                      }
                                    >
                                      <View
                                        style={
                                          Array [
                                            Object {
                                              "marginVertical": 6,
                                              "paddingLeft": 8,
                                            },
                                            Object {
                                              "flex": 1,
                                              "justifyContent": "center",
                                            },
                                          ]
                                        }
                                      >
                                        <Text
                                          numberOfLines={5}
                                          style={
                                            Array [
                                              Object {
                                                "color": "#000000",
                                                "fontFamily": "System",
                                                "fontWeight": "400",
                                                "textAlign": "left",
                                              },
                                              Array [
                                                Object {
                                                  "fontSize": 16,
                                                },
                                                Object {
                                                  "color": "rgba(0, 0, 0, 0.87)",
                                                },
                                                undefined,
                                              ],
                                            ]
                                          }
                                        >
                                          <Text
                                            style={
                                              Array [
                                                Object {
                                                  "color": "#000000",
                                                  "fontFamily": "System",
                                                  "fontWeight": "400",
                                                  "textAlign": "left",
                                                },
                                                Array [
                                                  Object {
                                                    "color": "rgba(0, 0, 0, 0.87)",
                                                    "fontFamily": "System",
                                                    "fontWeight": "400",
                                                    "textAlign": "left",
                                                    "writingDirection": "ltr",
                                                  },
                                                  Array [
                                                    Object {
                                                      "fontSize": 16,
                                                      "letterSpacing": 0.5,
                                                      "lineHeight": 24,
                                                      "marginVertical": 2,
                                                    },
                                                    undefined,
                                                  ],
                                                  Array [
                                                    Object {
                                                      "fontSize": 16,
                                                      "letterSpacing": 0.5,
                                                      "lineHeight": 24,
                                                      "marginVertical": 2,
                                                    },
                                                    undefined,
                                                  ],
                                                ],
                                              ]
                                            }
                                          >
                                            text-2
                                          </Text>
                                        </Text>
                                        <View
                                          style={
                                            Object {
                                              "flex": 1,
                                              "flexDirection": "row",
                                              "justifyContent": "space-between",
                                            }
                                          }
                                        >
                                          <Text
                                            style={
                                              Array [
                                                Object {
                                                  "color": "#000000",
                                                  "fontFamily": "System",
                                                  "fontWeight": "400",
                                                  "textAlign": "left",
                                                },
                                                Array [
                                                  Object {
                                                    "color": "rgba(0, 0, 0, 0.87)",
                                                    "fontFamily": "System",
                                                    "fontWeight": "400",
                                                    "textAlign": "left",
                                                    "writingDirection": "ltr",
                                                  },
                                                  Array [
                                                    Object {
                                                      "fontSize": 14,
                                                      "letterSpacing": 0.25,
                                                      "lineHeight": 20,
                                                      "marginVertical": 2,
                                                    },
                                                    undefined,
                                                  ],
                                                  Array [
                                                    Object {
                                                      "fontSize": 14,
                                                      "letterSpacing": 0.25,
                                                      "lineHeight": 20,
                                                      "marginVertical": 2,
                                                    },
                                                    undefined,
                                                  ],
                                                ],
                                              ]
                                            }
                                          >
                                            author-2
                                             from 
                                            country-2
                                          </Text>
                                          <Text
                                            style={
                                              Array [
                                                Object {
                                                  "color": "#000000",
                                                  "fontFamily": "System",
                                                  "fontWeight": "400",
                                                  "textAlign": "left",
                                                },
                                                Array [
                                                  Object {
                                                    "color": "rgba(0, 0, 0, 0.87)",
                                                    "fontFamily": "System",
                                                    "fontWeight": "400",
                                                    "textAlign": "left",
                                                    "writingDirection": "ltr",
                                                  },
                                                  Array [
                                                    Object {
                                                      "fontSize": 14,
                                                      "letterSpacing": 0.25,
                                                      "lineHeight": 20,
                                                      "marginVertical": 2,
                                                    },
                                                    Object {
                                                      "fontSize": 10,
                                                    },
                                                  ],
                                                  Array [
                                                    Object {
                                                      "fontSize": 14,
                                                      "letterSpacing": 0.25,
                                                      "lineHeight": 20,
                                                      "marginVertical": 2,
                                                    },
                                                    Object {
                                                      "fontSize": 10,
                                                    },
                                                  ],
                                                ],
                                              ]
                                            }
                                          >
                                            2029-01-02
                                          </Text>
                                        </View>
                                      </View>
                                    </View>
                                  </View>
                                </View>
                              </View>
                            </View>
                          </RCTScrollView>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RNCSafeAreaProvider>
  </View>
</View>
`;
